# bt-keyboard-remapper

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  partitions.csv  readme.org  sdkconfig
LICENSES/: LICENSE
components/console/: commands.c  esp_console_repl.c
configConv/: Makefile  base64.go  conv.go  conv.lns  conv.lua  entry.go  go.mod  go.sum
docker/: Dockerfile  docker-compose.yml  start.sh
main/: CMakeLists.txt  Config.c  Config.h  HID.c  HID.h  arduinoWrap.cpp  arduinoWrap.h  cmd_wifi.c  component.mk  console.c  console.cmd.c  console.h  console_example_main.c  convMap.c  convMap.h  hid_key.h  hid_keyboard_ctrl.c  hid_keyboard_ctrl.h  hid_keyboard_demo.c  hid_reportDesc.c  hid_reportDesc.h  hog_key.h  hog_keyboard_ctrl.c  hog_keyboard_ctrl.h  hog_keyboard_demo.h  main.c  mutex.c  mutex.h  my_bluetooth.c  my_bluetooth.h  my_console.c  my_console.cmd.c  my_console.h  my_keyboard.c  my_keyboard.h  my_ota.c  my_ota.h  stateCtrl.c  stateCtrl.h
main/depends/btstack/: cmd_decl.h  cmd_wifi.c  cmd_wifi.h  gap_inquiry.c  hid_keyboard_demo.c  hid_keyboard_demo.c.bak  hog_keyboard_demo.c  my_gap_inquiry.h
main/depends/esp-idf/console/: console_example_main.c
patch/components/arduino/: CMakeLists.txt
